# scrape-results

./: README.md  pyproject.toml
data/: 11v11_results.csv  manager_updates.csv  managers_df.csv  manual_attendances.csv  manual_dates.csv  manual_fixtures.csv  manual_results.csv  manual_team_names.csv  manual_venues.csv  national_league_attendances.csv  soccerbase_nat_league_results.csv
notebooks/: Part 1 scrape-11v11-results.ipynb  Part 2 scrape-soccerbase-results.ipynb  Part 3 Merge-11v11-and-soccer base.ipynb
output/: results_df.csv
